Fix margin spacing on tasks

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ td.vital {
 .clicker {
     cursor: pointer;
     cursor: hand;
+	line-height: 18px;
 }
 
 #ui.div {
